# roboy_error_detection

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  package.xml
docs/: api.md  contribute.md  index.md  joint-angle-error-detection.md  motor-error-detection.md  system_overview.md
docs/screenshots/: RoboyErrorDetection_Subscription_Schema.xml
include/roboy_error_detection/: common_utilities.hpp  main_common.hpp  roboyErrorDetection.hpp
src/: main.cpp  main_presentation.cpp  roboyErrorDetection.cpp
src/main/: main_common.cpp  main_joint_rel_angle_check.cpp  main_motor_alive_check.cpp  main_motor_dead_check.cpp  main_motor_health_check.cpp  main_motor_tendent_inconsistence.cpp  main_presentation.cpp
